frontend/test/should_pass/pattern_004.grg
pattern Foo
{
	x: Node;
}

rule r
{
	foo:Foo();

	modify
	{
		foo;
	}
}